--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ds870_atividade_2",
   "version": "1.0.0",
-  "description": "",
+  "description": "* Guilherme Alves da Silva - GRR20186254\r * Matheus Augusto de Moraes Ribeiro - GRR20176298\r * Michelly Narita Kuriyama - GRR",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config ./index.js",
@@ -13,11 +13,21 @@
   "dependencies": {
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sauxthem/ds870_2021n_atividade2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sauxthem/ds870_2021n_atividade2/issues"
+  },
+  "homepage": "https://github.com/sauxthem/ds870_2021n_atividade2#readme"
 }
