--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "moment": "^2.29.1",
